--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 </head>
 <body>
   <h1>It Works!</h1>
-  <h2>Test a change</h2>
-  <p>Auz deireurei Urf Lorem aps dolor derp doi urf</p>
+  <h2>Test a change.</h2>
+  <p>Changes in this file or one of the css files in <code>src/</code> should trigger a browser refresh when you save.</p>
+  <p>You may also connect to http://192.168.1.81:3000 with your favorite mobile device and work on responsiveness at the same time.</p>
 </body>
