--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
   <h1>It Works!</h1>
   <h2>Test a change.</h2>
   <p>Changes in this file or one of the css files in <code>src/</code> should trigger a browser refresh when you save.</p>
-  <p>You may also connect to http://192.168.1.81:3000 with your favorite mobile device and work on responsiveness at the same time.</p>
+  <p>BrowserSync will tell you how to connect with your favorite mobile device and work on responsiveness at the same time.</p>
 </body>
