cleaned up and trimmed the file structure

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <head>
   <link rel="stylesheet" href="build/styles.css">
 </head>
-<body>
-  <h1>It Works!</h1>
-  <h2>Test a change.</h2>
+<body class="test">
+  <h1 class="test2">It Works.</h1>
+  <h2 class="test3">Test a change.</h2>
   <p>Changes in this file or one of the css files in <code>src/</code> should trigger a browser refresh when you save.</p>
   <p>BrowserSync will tell you how to connect with your favorite mobile device and work on responsiveness at the same time.</p>
 </body>
